errors and some crud
