# openapi.yaml
@@ -3,15 +3,15 @@
 
 openapi: 3.0.3
 info:
-    title: RealWorld API
+    title: Conduit API
     description: The greeting service definition.
     version: 0.0.1
 paths:
     /api/articles:
         get:
             tags:
-                - RealWorld
-            operationId: RealWorld_ListArticles
+                - Conduit
+            operationId: Conduit_ListArticles
             parameters:
                 - name: tag
                   in: query
@@ -44,8 +44,8 @@ paths:
                                 $ref: '#/components/schemas/MultipleArticlesReply'
         post:
             tags:
-                - RealWorld
-            operationId: RealWorld_CreateArticle
+                - Conduit
+            operationId: Conduit_CreateArticle
             requestBody:
                 content:
                     application/json:
@@ -62,8 +62,8 @@ paths:
     /api/articles/feed:
         get:
             tags:
-                - RealWorld
-            operationId: RealWorld_FeedArticles
+                - Conduit
+            operationId: Conduit_FeedArticles
             parameters:
                 - name: limit
                   in: query
@@ -85,8 +85,8 @@ paths:
     /api/articles/{slug}:
         get:
             tags:
-                - RealWorld
-            operationId: RealWorld_GetArticle
+                - Conduit
+            operationId: Conduit_GetArticle
             parameters:
                 - name: slug
                   in: path
@@ -102,8 +102,8 @@ paths:
                                 $ref: '#/components/schemas/SingleArticleReply'
         put:
             tags:
-                - RealWorld
-            operationId: RealWorld_UpdateArticle
+                - Conduit
+            operationId: Conduit_UpdateArticle
             parameters:
                 - name: slug
                   in: path
@@ -125,8 +125,8 @@ paths:
                                 $ref: '#/components/schemas/SingleArticleReply'
         delete:
             tags:
-                - RealWorld
-            operationId: RealWorld_DeleteArticle
+                - Conduit
+            operationId: Conduit_DeleteArticle
             parameters:
                 - name: slug
                   in: path
@@ -143,8 +143,8 @@ paths:
     /api/articles/{slug}/comments:
         get:
             tags:
-                - RealWorld
-            operationId: RealWorld_GetComments
+                - Conduit
+            operationId: Conduit_GetComments
             parameters:
                 - name: slug
                   in: path
@@ -164,8 +164,8 @@ paths:
                                 $ref: '#/components/schemas/MultipleCommentsReply'
         post:
             tags:
-                - RealWorld
-            operationId: RealWorld_AddComment
+                - Conduit
+            operationId: Conduit_AddComment
             parameters:
                 - name: slug
                   in: path
@@ -188,8 +188,8 @@ paths:
     /api/articles/{slug}/comments/{id}:
         delete:
             tags:
-                - RealWorld
-            operationId: RealWorld_DeleteComment
+                - Conduit
+            operationId: Conduit_DeleteComment
             parameters:
                 - name: slug
                   in: path
@@ -212,8 +212,8 @@ paths:
     /api/articles/{slug}/favorite:
         post:
             tags:
-                - RealWorld
-            operationId: RealWorld_FavoriteArticle
+                - Conduit
+            operationId: Conduit_FavoriteArticle
             parameters:
                 - name: slug
                   in: path
@@ -235,8 +235,8 @@ paths:
                                 $ref: '#/components/schemas/SingleArticleReply'
         delete:
             tags:
-                - RealWorld
-            operationId: RealWorld_UnfavoriteArticle
+                - Conduit
+            operationId: Conduit_UnfavoriteArticle
             parameters:
                 - name: slug
                   in: path
@@ -253,8 +253,8 @@ paths:
     /api/profiles/{username}:
         get:
             tags:
-                - RealWorld
-            operationId: RealWorld_GetProfile
+                - Conduit
+            operationId: Conduit_GetProfile
             parameters:
                 - name: username
                   in: path
@@ -271,8 +271,8 @@ paths:
     /api/profiles/{username}/follow:
         post:
             tags:
-                - RealWorld
-            operationId: RealWorld_FollowUser
+                - Conduit
+            operationId: Conduit_FollowUser
             parameters:
                 - name: username
                   in: path
@@ -294,8 +294,8 @@ paths:
                                 $ref: '#/components/schemas/ProfileReply'
         delete:
             tags:
-                - RealWorld
-            operationId: RealWorld_UnfollowUser
+                - Conduit
+            operationId: Conduit_UnfollowUser
             parameters:
                 - name: username
                   in: path
@@ -312,8 +312,8 @@ paths:
     /api/tags:
         get:
             tags:
-                - RealWorld
-            operationId: RealWorld_GetTags
+                - Conduit
+            operationId: Conduit_GetTags
             responses:
                 "200":
                     description: OK
@@ -324,8 +324,8 @@ paths:
     /api/user:
         get:
             tags:
-                - RealWorld
-            operationId: RealWorld_GetCurrentUser
+                - Conduit
+            operationId: Conduit_GetCurrentUser
             responses:
                 "200":
                     description: OK
@@ -335,8 +335,8 @@ paths:
                                 $ref: '#/components/schemas/UserReply'
         put:
             tags:
-                - RealWorld
-            operationId: RealWorld_UpdateUser
+                - Conduit
+            operationId: Conduit_UpdateUser
             requestBody:
                 content:
                     application/json:
@@ -353,8 +353,8 @@ paths:
     /api/users:
         post:
             tags:
-                - RealWorld
-            operationId: RealWorld_Register
+                - Conduit
+            operationId: Conduit_Register
             requestBody:
                 content:
                     application/json:
@@ -371,8 +371,8 @@ paths:
     /api/users/login:
         post:
             tags:
-                - RealWorld
-            operationId: RealWorld_Login
+                - Conduit
+            operationId: Conduit_Login
             requestBody:
                 content:
                     application/json:
@@ -685,4 +685,4 @@ components:
                 image:
                     type: string
 tags:
-    - name: RealWorld
+    - name: Conduit
